--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="cursor"></div>
     <div class="main">
         <div class="page1">
             <h1>Change </h1>
@@ -30,18 +31,33 @@
                 <img data-scroll data-scroll-speed="1"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/bb84b7106e978c37f5aa92c8d5781751b2e9d9f2-900x1500.png/Rectangle%202.png?w=640&h=1067&auto=format"
                     alt="">
-                <div class="dets"></div>
-
+                <div data-scroll data-scroll-speed="-1" class="dets"></div>
             </div>
             <div id="elem3" class="elem">
                 <img data-scroll data-scroll-speed="1"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/d3151106849ff2494d66916cf554c68a0603444d-902x1500.png/Rectangle%20220.png?rect=1,0,900,1500&w=640&h=1067&fit=min&auto=format"
                     alt="">
-                <div class="dets"></div>
-
+                <div data-scroll data-scroll-speed="-1" class="dets"></div>
             </div>
         </div>
-        <div class="page3"></div>
+        <div class="page3">
+            <div class="child" id="child1">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d6a2a4be8e3063d64648773f57f5f447609a93ab-5000x5000.png/Love-Care-Pack-Expanded-Two-Good-Co.png?w=1024&h=1024&auto=format"
+                    alt="">
+            </div>
+            <div class="child" id="child2">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d6a2a4be8e3063d64648773f57f5f447609a93ab-5000x5000.png/Love-Care-Pack-Expanded-Two-Good-Co.png?w=1024&h=1024&auto=format"
+                    alt="">
+            </div>
+            <div class="child" id="child3">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d6a2a4be8e3063d64648773f57f5f447609a93ab-5000x5000.png/Love-Care-Pack-Expanded-Two-Good-Co.png?w=1024&h=1024&auto=format"
+                    alt="">
+            </div>
+            <div class="child" id="child4">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d6a2a4be8e3063d64648773f57f5f447609a93ab-5000x5000.png/Love-Care-Pack-Expanded-Two-Good-Co.png?w=1024&h=1024&auto=format"
+                    alt="">
+            </div>
+        </div>
     </div>
 
 
