--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Two Good Co</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1499265096006000640/ZhEnSTch_400x400.jpg"
+        type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
@@ -13,8 +15,8 @@
 <body>
     <div class="nav">
         <div class="nav-part1">
-            <svg width="106" height="83" viewBox="0 0 106 83" fill="none" xmlns="http://www.w3.org/2000/svg"
-                style="transform: translate(0px, 0px);">
+            <svg id="twogood" width="106" height="83" viewBox="0 0 106 83" fill="none"
+                xmlns="http://www.w3.org/2000/svg" style="transform: translate(0px, 0px);">
                 <g clip-path="url(#clip0_2228_162)">
                     <path d="M5.50062 6.4473H0V0.557617H17.7807V6.4473H12.2464V25.4842H5.50062V6.4473Z"
                         fill="currentColor"></path>
@@ -52,8 +54,8 @@
                     </clipPath>
                 </defs>
             </svg>
-            <svg width="62" height="63" viewBox="0 0 62 63" fill="none" xmlns="http://www.w3.org/2000/svg"
-                class="go1438215768">
+            <svg id="twogoodlogo" width="62" height="63" viewBox="0 0 62 63" fill="none"
+                xmlns="http://www.w3.org/2000/svg" class="go1438215768">
                 <path
                     d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
                     fill="currentColor"></path>
